search control add width fix, padding and gap,add scroll to contacts.add footer input,icons and colors,media screen,add pct,end

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,11 @@ footer {
 .search-control {
   margin: 0 auto;
   background-color: white;
+  width: 95%; /* add width fix, padding and gap*/
+  padding: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .search-bar .fa-search {
@@ -170,14 +175,14 @@ footer input {
 .contacts {
   list-style-type: none;
   height: 75%;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .contact-item {
   display: flex;
   align-items: center;
   height: calc(100% / 7);
-  border-bottom: 1px solid rgb(237, 237, 237);
+  border-bottom: 1px solid rgb(223, 216, 216);
 }
 
 .contact-content {
@@ -196,7 +201,7 @@ footer input {
 .recent-text-time {
   position: relative;
   top: -15px;
-  color: lightgray;
+  color: rgb(218, 216, 216);
   font-size: 0.7rem;
 }
 
@@ -215,6 +220,13 @@ footer input {
 }
 
 /****************************************** Chat *****************************************************************************/
+.right-sidebar main {
+  height: 80%;
+  background-image: url("/assets/img/mine.jpg");
+  background-size: cover;
+  background-position: center;
+  overflow-y: auto;
+}
 
 .chat-box {
   display: flex;
@@ -231,7 +243,7 @@ footer input {
 }
 
 .received {
-  background-color: #dbdad2;
+  background-color: #fffef6;
 }
 
 .text-content {
@@ -251,17 +263,37 @@ footer input {
 }
 
 footer input {
+  width: 88%;
+  padding: 1.2rem 0 1.2rem 1rem;
+  border-radius: 5px;
+}
+
+.fa-face-smile,
+.fa-microphone {
+  font-size: 1.6rem;
+}
+
+footer input::placeholder {
+  font-size: 1rem;
+}
+
+.fa-face-smile {
+  color: rgba(128, 128, 128, 0.8);
+}
+
+.fa-microphone {
+  color: rgba(128, 128, 128, 0.9);
 }
 
 /********************************* Media Query *********************************************** ***********************************************************************************************/
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 991px) {
   footer input {
     width: 80%;
   }
 }
 
-@media screen and (max-width: 911px) {
+@media screen and (max-width: 566px) {
   .left-sidebar .notification,
   .left-sidebar .contact-content,
   .left-sidebar .recent-text-time {
@@ -271,14 +303,13 @@ footer input {
 
 @media screen and (max-width: 730px) {
   .left-sidebar .actions li:nth-of-type(2) {
-    /* I had to put a mediaquery more to have the 3 scree*/
     display: none;
   }
 }
 
 /******************************************************* Tablet *******************************/
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 566px) {
   /******************************************************* App *******************************/
   .app-container,
   .contacts {
